target/classes/META-INF/fabric8/openshift/k8s-robbinclient-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/k8s-robbinclient
    fabric8.io/scm-tag: HEAD
    fabric8.io/issue-system: GitHub
    fabric8.io/issue-tracker-url: https://github.com/spring-projects/spring-boot/issues
  labels:
    app: k8s-robbinclient
    provider: fabric8
    version: "1.0"
    group: org.springframework.cloud
  name: k8s-robbinclient
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: k8s-robbinclient
    provider: fabric8
    group: org.springframework.cloud
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/issue-system: GitHub
        fabric8.io/issue-tracker-url: https://github.com/spring-projects/spring-boot/issues
        fabric8.io/scm-tag: HEAD
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/k8s-robbinclient
      labels:
        app: k8s-robbinclient
        provider: fabric8
        version: "1.0"
        group: org.springframework.cloud
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: cloud/k8s-robbinclient:1.0
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
